--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 	var promise = new Promise(function(){});
 </script>
 <div class="div1">
-	This is div One.
+	<span>This is a div 1</span>
 </div>
 </html>
